# conan-jsonnet

./: .gitignore  .travis.yml  CMakeLists.txt  conanfile.py
test_package/: conanfile.py  sours.jsonnet  test_package.cpp
